--- a/hf_user_crawler/scrapy.cfg
+++ b/hf_user_crawler/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = hf_user_scrawler.settings
+default = hf_user_crawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = hf_user_scrawler
+project = hf_user_crawler
