git: update ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.vscode
-logs
-tmp
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -176,6 +173,12 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Custom
+.vscode
+logs
+tmp
+
 data/raw/*
 .gitignore
 .gitignore
