--- a/config/conda.env
+++ b/config/conda.env
@@ -3,15 +3,28 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - anyio=4.9.0=pyh29332c3_0
   - appdirs=1.4.4=pyhd8ed1ab_1
   - appnope=0.1.4=pyhd8ed1ab_1
+  - argon2-cffi=23.1.0=pyhd8ed1ab_1
+  - argon2-cffi-bindings=21.2.0=py312h024a12e_5
+  - arpack=3.9.1=nompi_h1f29f7c_102
+  - arrow=1.3.0=pyhd8ed1ab_1
   - asttokens=3.0.0=pyhd8ed1ab_1
+  - async-lru=2.0.5=pyh29332c3_0
   - attrs=25.3.0=pyh71513ae_0
   - automat=24.8.1=pyhd8ed1ab_1
+  - babel=2.17.0=pyhd8ed1ab_0
   - bcrypt=4.3.0=py312hcd83bfe_0
+  - beautifulsoup4=4.13.3=pyha770c72_0
+  - bleach=6.2.0=pyh29332c3_4
+  - bleach-with-css=6.2.0=h82add2a_4
   - brotli-python=1.1.0=py312hde4cb15_2
   - bzip2=1.0.8=h99b78c6_7
   - ca-certificates=2025.1.31=hf0a4a13_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.18.4=h6a3b0d2_0
   - certifi=2025.1.31=pyhd8ed1ab_0
   - cffi=1.17.1=py312h0fad829_0
   - charset-normalizer=3.4.1=pyhd8ed1ab_0
@@ -26,22 +39,54 @@ dependencies:
   - dill=0.3.9=pyhd8ed1ab_1
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - filelock=3.18.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h1383a14_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fqdn=1.5.1=pyhd8ed1ab_1
+  - freetype=2.13.3=h1d14073_0
+  - glpk=5.0=h6d7a090_0
+  - gmp=6.3.0=h7bae524_2
+  - h11=0.14.0=pyhd8ed1ab_1
   - h2=4.2.0=pyhd8ed1ab_0
   - hpack=4.1.0=pyhd8ed1ab_0
+  - httpcore=1.0.7=pyh29332c3_1
+  - httpx=0.28.1=pyhd8ed1ab_0
   - hyperframe=6.1.0=pyhd8ed1ab_0
   - hyperlink=21.0.0=pyh29332c3_1
+  - icu=75.1=hfee45f7_0
   - idna=3.10=pyhd8ed1ab_1
   - importlib-metadata=8.6.1=pyha770c72_0
+  - importlib_resources=6.5.2=pyhd8ed1ab_0
   - incremental=24.7.2=pyhd8ed1ab_1
   - ipykernel=6.29.5=pyh57ce528_0
   - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
   - ipywidgets=8.1.5=pyhd8ed1ab_1
+  - isoduration=20.11.0=pyhd8ed1ab_1
   - itemadapter=0.11.0=pyhd8ed1ab_0
   - itemloaders=1.3.2=pyhd8ed1ab_1
   - jedi=0.19.2=pyhd8ed1ab_1
+  - jinja2=3.1.6=pyhd8ed1ab_0
   - jmespath=1.0.1=pyhd8ed1ab_1
+  - json5=0.10.0=pyhd8ed1ab_1
+  - jsonpointer=3.0.0=py312h81bd7bf_1
+  - jsonschema=4.23.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+  - jsonschema-with-format-nongpl=4.23.0=hd8ed1ab_1
+  - jupyter=1.1.1=pyhd8ed1ab_1
+  - jupyter-lsp=2.2.5=pyhd8ed1ab_1
   - jupyter_client=8.6.3=pyhd8ed1ab_1
+  - jupyter_console=6.6.3=pyhd8ed1ab_1
   - jupyter_core=5.7.2=pyh31011fe_1
+  - jupyter_events=0.12.0=pyh29332c3_0
+  - jupyter_server=2.15.0=pyhd8ed1ab_0
+  - jupyter_server_terminals=0.5.3=pyhd8ed1ab_1
+  - jupyterlab=4.3.6=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
+  - jupyterlab_server=2.27.3=pyhd8ed1ab_1
   - jupyterlab_widgets=3.0.13=pyhd8ed1ab_1
   - krb5=1.21.3=h237132a_0
   - libblas=3.9.0=31_h10e41b3_openblas
@@ -52,35 +97,51 @@ dependencies:
   - libffi=3.4.2=h3422bc3_5
   - libgfortran=5.0.0=14_2_0_h6c33f7e_1
   - libgfortran5=14.2.0=h6c33f7e_1
+  - libglib=2.82.2=hdff4504_1
   - libiconv=1.18=hfe07756_1
+  - libintl=0.23.1=h493aca8_0
   - liblapack=3.9.0=31_hc9a63f6_openblas
   - liblzma=5.6.4=h39f12f2_0
   - libopenblas=0.3.29=openmp_hf332438_0
+  - libpng=1.6.47=h3783ad8_0
   - libsodium=1.0.20=h99b78c6_0
   - libsqlite=3.49.1=h3f77e49_2
-  - libxml2=2.13.6=hce475f1_0
+  - libxml2=2.13.6=h178c5d8_0
   - libxslt=1.1.39=h223e5b9_0
   - libzlib=1.3.1=h8359307_2
   - llvm-openmp=20.1.1=hdb05f8b_1
   - lxml=5.3.1=py312h9535dd2_0
   - markdown-it-py=3.0.0=pyhd8ed1ab_1
+  - markupsafe=3.0.2=py312h998013c_1
   - matplotlib-inline=0.1.7=pyhd8ed1ab_1
   - mdurl=0.1.2=pyhd8ed1ab_1
+  - mistune=3.1.3=pyh29332c3_0
+  - nbclient=0.10.2=pyhd8ed1ab_0
+  - nbconvert-core=7.16.6=pyh29332c3_0
+  - nbformat=5.10.4=pyhd8ed1ab_1
   - ncurses=6.5=h5e97a16_3
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - notebook=7.3.3=pyhd8ed1ab_0
+  - notebook-shim=0.2.4=pyhd8ed1ab_1
   - numpy=2.2.4=py312h7c1f314_0
   - openssl=3.4.1=h81ee809_0
+  - overrides=7.7.0=pyhd8ed1ab_1
   - packaging=24.2=pyhd8ed1ab_2
   - pandarallel=1.6.5=pyhd8ed1ab_1
   - pandas=2.2.3=py312hcd31e36_1
   - parsel=1.10.0=pyhd8ed1ab_0
   - parso=0.8.4=pyhd8ed1ab_1
+  - pcre2=10.44=h297a79d_2
   - pexpect=4.9.0=pyhd8ed1ab_1
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pip=25.0.1=pyh8b19718_0
+  - pixman=0.44.2=h2f9eb0b_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.7=pyh29332c3_0
   - polars=1.26.0=py312hc3c60d3_0
+  - prometheus_client=0.21.1=pyhd8ed1ab_0
   - prompt-toolkit=3.0.50=pyha770c72_0
+  - prompt_toolkit=3.0.50=hd8ed1ab_0
   - protego=0.4.0=pyhd8ed1ab_0
   - psutil=7.0.0=py312hea69d52_0
   - ptyprocess=0.7.0=pyhd8ed1ab_1
@@ -90,25 +151,41 @@ dependencies:
   - pycparser=2.22=pyh29332c3_1
   - pydispatcher=2.0.5=py_1
   - pygments=2.19.1=pyhd8ed1ab_0
+  - pyobjc-core=11.0=py312hb9d441b_0
+  - pyobjc-framework-cocoa=11.0=py312hb9d441b_0
   - pyopenssl=25.0.0=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha55dd90_7
   - python=3.12.9=hc22306f_1_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+  - python-igraph=0.11.8=py312h8e54378_0
+  - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2025.2=pyhd8ed1ab_0
   - python_abi=3.12=5_cp312
   - pytz=2024.1=pyhd8ed1ab_0
+  - pyyaml=6.0.2=py312h998013c_2
   - pyzmq=26.3.0=py312hf4875e0_0
   - queuelib=1.7.0=pyhd8ed1ab_2
   - readline=8.2=h1d1bf99_2
+  - referencing=0.36.2=pyh29332c3_0
   - requests=2.32.3=pyhd8ed1ab_1
   - requests-file=2.1.0=pyhd8ed1ab_1
+  - rfc3339-validator=0.1.4=pyhd8ed1ab_1
+  - rfc3986-validator=0.1.1=pyh9f0ad1d_0
   - rich=13.9.4=pyhd8ed1ab_1
+  - rpds-py=0.23.1=py312hd60eec9_0
+  - ruff=0.11.2=py312h31a5b27_0
   - scrapy=2.12.0=py312h81bd7bf_1
+  - send2trash=1.8.3=pyh31c8845_1
   - service-identity=24.2.0=pyha770c72_1
   - service_identity=24.2.0=hd8ed1ab_1
   - setuptools=75.8.2=pyhff2d567_0
   - six=1.17.0=pyhd8ed1ab_0
+  - sniffio=1.3.1=pyhd8ed1ab_1
   - stack_data=0.6.3=pyhd8ed1ab_1
+  - terminado=0.18.1=pyh31c8845_0
+  - texttable=1.7.0=pyhd8ed1ab_1
+  - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=h5083fa2_1
   - tldextract=5.1.3=pyhd8ed1ab_1
   - tomli=2.2.1=pyhd8ed1ab_1
@@ -116,41 +193,43 @@ dependencies:
   - tqdm=4.67.1=pyhd8ed1ab_1
   - traitlets=5.14.3=pyhd8ed1ab_1
   - twisted=24.11.0=py312hea69d52_0
+  - types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
+  - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2025b=h78e105d_0
+  - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.3.0=pyhd8ed1ab_0
   - w3lib=2.3.1=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
+  - webcolors=24.11.1=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_3
+  - websocket-client=1.8.0=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
   - widgetsnbextension=4.0.13=pyhd8ed1ab_1
+  - yaml=0.2.5=h3422bc3_2
   - zeromq=4.3.5=hc1bb282_7
   - zipp=3.21.0=pyhd8ed1ab_1
   - zope.interface=7.2=py312hea69d52_0
   - zstandard=0.23.0=py312hea69d52_1
   - pip:
       - backcall==0.2.0
-      - beautifulsoup4==4.13.3
-      - bleach==6.2.0
+      - cairocffi==1.7.1
+      - contourpy==1.3.1
+      - cycler==0.12.1
       - docopt==0.6.2
       - executing==2.2.0
-      - fastjsonschema==2.21.1
+      - fonttools==4.56.0
       - ipython==8.12.3
-      - jinja2==3.1.6
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2024.10.1
-      - jupyterlab-pygments==0.3.0
-      - markupsafe==3.0.2
-      - mistune==3.1.3
-      - nbclient==0.10.2
-      - nbconvert==7.16.6
-      - nbformat==5.10.4
+      - kiwisolver==1.4.8
+      - matplotlib==3.10.1
       - pandocfilters==1.5.1
+      - pillow==11.1.0
       - pipreqs==0.5.0
-      - referencing==0.36.2
-      - rpds-py==0.23.1
+      - pkgman==0.1.0
+      - pycairo==1.27.0
+      - pyparsing==3.2.3
+      - seaborn==0.13.2
       - soupsieve==2.6
-      - tinycss2==1.4.0
-      - webencodings==0.5.1
       - yarg==0.1.9
 prefix: /Users/rey/miniconda3/envs/scrape
